# FaceRecognitionOpenCV

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  dart_interface.cpp  dart_interface.h  example.c  face_reco_example  face_reco_example.cpp  http_main.cpp  main.cpp  main_server.py  req.txt  test
src/: Recognizer.cpp  Recognizer.h  SimpleRecognizer.cpp  SimpleRecognizer.h  face_models.cpp  face_models.h  opencvutils.h
src/utils/: file_exists.h
tests/: main.c
